fix: Remove overflowing

--- a/src/components/FoodSection/FoodSection.module.scss
+++ b/src/components/FoodSection/FoodSection.module.scss
@@ -45,7 +45,7 @@
   margin-left: -2rem;
 
   @media (max-width: 768px) {
-    width: calc(100vw + 2rem);
+    width: calc(100vw + 1rem);
   }
 }
 
